[package]
name = "loopcat"
version = "0.1.1"
edition = "2021"
description = "bring me the lööps, bröther (dead memes are funny)"
license = "MIT"
documentation = "https://github.com/FADEOffical/loopcat/README.md"
repository = "https://github.com/FADEOffical/loopcat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
